# voxelius

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  thirdpartylegalnotices.py  thirdpartylegalnotices.txt
core/: CMakeLists.txt  aabb.cc  aabb.hh  angles.hh  binfile.cc  binfile.hh  buffer.cc  buffer.hh  cmdline.cc  cmdline.hh  concepts.hh  config.cc  config.hh  constexpr.hh  crc64.cc  crc64.hh  epoch.cc  epoch.hh  feature.hh.in  floathacks.hh  image.cc  image.hh  macros.hh  pch.hh  randomizer.hh  resource.hh  strtools.cc  strtools.hh  threading.cc  threading.hh  vectors.hh  version.cc  version.cc.in  version.hh  version.hh.in
core/config/: CMakeLists.txt  boolean.cc  boolean.hh  ivalue.hh  number.hh  string.cc  string.hh
core/io/: CMakeLists.txt  buffer.cc  buffer.hh  cmdline.cc  cmdline.hh  config_map.cc  config_map.hh  physfs.cc  physfs.hh
core/math/: CMakeLists.txt  aabb.cc  aabb.hh  angles.hh  concepts.hh  constexpr.hh  crc64.cc  crc64.hh  floathacks.hh  randomizer.hh  vectors.hh
core/resource/: CMakeLists.txt  binfile.cc  binfile.hh  image.cc  image.hh  resource.cc  resource.hh
core/utils/: CMakeLists.txt  epoch.cc  epoch.hh  physfs.cc  physfs.hh  string.cc  string.hh
data/lang/: lang.en_US.json  manifest.json
data/misc/: gamecontrollerdb.txt  splashes.txt  splashes_client.txt  splashes_server.txt
data/shaders/: chunk_quad.frag  chunk_quad.vert  outline.frag  outline.vert
game/: CMakeLists.txt
game/client/: CMakeLists.txt  background.cc  background.hh  bother.cc  bother.hh  camera.cc  chat.cc  chat.hh  chunk_mesher.cc  chunk_quad.hh  chunk_renderer.cc  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  const.hh  crosshair.cc  crosshair.hh  direct_connection.cc  direct_connection.hh  experiments.cc  experiments.hh  factory.cc  factory.hh  game.cc  game.hh  gamepad.cc  gamepad_axis.cc  gamepad_axis.hh  gamepad_button.cc  gamepad_button.hh  glfw.hh  globals.cc  globals.hh  gui_screen.hh  hotbar.cc  hotbar.hh  imdraw_ext.cc  imdraw_ext.hh  interpolation.cc  interpolation.hh  (+56 more)
game/client/config/: CMakeLists.txt  gamepad_axis.cc  gamepad_axis.hh  gamepad_button.cc  gamepad_button.hh  keybind.cc  keybind.hh
game/client/entity/: CMakeLists.txt  camera.cc  camera.hh  factory.cc  factory.hh  interpolation.cc  interpolation.hh  listener.cc  listener.hh  player_look.cc  player_look.hh  player_move.cc  player_move.hh  sound_emitter.cc  sound_emitter.hh
game/client/gui/: CMakeLists.txt  background.cc  background.hh  bother.cc  bother.hh  chat.cc  chat.hh  crosshair.cc  crosshair.hh  direct_connection.cc  direct_connection.hh  gui_screen.hh  hotbar.cc  hotbar.hh  imdraw_ext.cc  imdraw_ext.hh  language.cc  language.hh  main_menu.cc  main_menu.hh  message_box.cc  message_box.hh  metrics.cc  metrics.hh  play_menu.cc  play_menu.hh  progress_bar.cc  progress_bar.hh  scoreboard.cc  scoreboard.hh  settings.cc  settings.hh  splash.cc  splash.hh  status_lines.cc  status_lines.hh  window_title.cc  window_title.hh
game/client/io/: CMakeLists.txt  gamepad.cc  gamepad.hh  glfw.hh
game/client/resource/: CMakeLists.txt  sound_effect.cc  sound_effect.hh  texture_gui.cc  texture_gui.hh
game/client/sound/: CMakeLists.txt  sound.cc  sound.hh
game/client/world/: CMakeLists.txt  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_renderer.cc  chunk_renderer.hh  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  outline.cc  outline.hh  player_target.cc  player_target.hh  skybox.cc  skybox.hh  voxel_anims.cc  voxel_anims.hh  voxel_atlas.cc  voxel_atlas.hh  voxel_sounds.cc  voxel_sounds.hh
game/server/: CMakeLists.txt  chat.cc  chat.hh  game.cc  game.hh  globals.cc  globals.hh  main.cc  overworld.cc  overworld.hh  pch.hh  receive.cc  receive.hh  sessions.cc  sessions.hh  status.cc  status.hh  universe.cc  universe.hh  unloader.cc  unloader.hh  whitelist.cc  whitelist.hh  worldgen.cc  worldgen.hh
game/server/world/: CMakeLists.txt  inhabited.hh  overworld.cc  overworld.hh  random_tick.cc  random_tick.hh  universe.cc  universe.hh  unloader.cc  unloader.hh  worldgen.cc  worldgen.hh
game/shared/: CMakeLists.txt  chunk.cc  chunk.hh  chunk_aabb.cc  chunk_aabb.hh  collision.cc  collision.hh  const.hh  coord.hh  dimension.cc  dimension.hh  factory.cc  factory.hh  feature.cc  feature.hh  game.cc  game.hh  game_items.cc  game_items.hh  game_voxels.cc  game_voxels.hh  globals.cc  globals.hh  gravity.cc  gravity.hh  grounded.hh  head.hh  item_registry.cc  item_registry.hh  pch.hh  protocol.cc  protocol.hh  ray_dda.cc  ray_dda.hh  splash.cc  splash.hh  stasis.cc  stasis.hh  threading.cc  threading.hh  (+9 more)
game/shared/entity/: CMakeLists.txt  collision.cc  collision.hh  factory.cc  factory.hh  gravity.cc  gravity.hh  grounded.hh  head.hh  player.hh  stasis.cc  stasis.hh  transform.cc  transform.hh  velocity.cc  velocity.hh
game/shared/world/: CMakeLists.txt  chunk.cc  chunk.hh  chunk_aabb.cc  chunk_aabb.hh  dimension.cc  dimension.hh  feature.cc  feature.hh  item.cc  item.hh  item_registry.cc  item_registry.hh  ray_dda.cc  ray_dda.hh  voxel.cc  voxel.hh  voxel_registry.cc  voxel_registry.hh  voxel_storage.cc  voxel_storage.hh
game/shared/world/voxels/: generic.hh
misc/: client_splash.xcf
src/core/: CMakeLists.txt  aabb.cc  aabb.hh  angles.hh  binfile.hh  buffer.hh  cmdline.hh  concepts.hh  config.cc  config.hh  constexpr.hh  crc64.cc  crc64.hh  epoch.hh  floathacks.hh  image.hh  macros.hh  pch.hh  randomizer.hh  resource.hh  strtools.hh  vectors.hh  version.cc  version.cc.in  version.hh
src/game/client/: CMakeLists.txt  background.cc  background.hh  bother.cc  bother.hh  camera.hh  chat.cc  chat.hh  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_renderer.cc  chunk_renderer.hh  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  crosshair.cc  crosshair.hh  direct_connection.cc  direct_connection.hh  experiments.cc  experiments.hh  factory.hh  game.cc  game.hh  gamepad.hh  gamepad_axis.hh  gamepad_button.hh  glfw.hh  globals.cc  globals.hh  hotbar.cc  hotbar.hh  imdraw_ext.cc  imdraw_ext.hh  interpolation.hh  keybind.hh  (+45 more)
(+55 files in other folders)
